--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "influxdb-nodejs": "^3.1.0",
     "mqtt": "^5.5.2",
