--- a/.env
+++ b/.env
@@ -1,13 +1,18 @@
 PORT=3000
 LOCAL_MQTT_USERNAME=samm002
 LOCAL_MQTT_PASSWORD=Root123
-LOCAL_MQTT_BROKER=localhost
+LOCAL_MQTT_BROKER=34.101.237.206
 LOCAL_MQTT_PORT=1883
 LOCAL_MQTT_CLIENT_ID=9903d000-9c27-4bf9-95cd-6cb9699d5efd
 
-LOCAL_INFLUXDB_TOKEN="6GuwUfXMkbDzpEJ0-z0VGocZrwDD-NaMpOzyeEU_yDn-psqYeefhSbqdUGpOSjoJ0G0uCQzhwZ-NHa7mBWsPlw=="
-LOCAL_INFLUXDB_URL=http://localhost:8086
+LOCALV_INFLUXDB_TOKEN="6GuwUfXMkbDzpEJ0-z0VGocZrwDD-NaMpOzyeEU_yDn-psqYeefhSbqdUGpOSjoJ0G0uCQzhwZ-NHa7mBWsPlw=="
+LOCALV_INFLUXDB_URL=http://localhost:8086
+LOCALV_INFLUXDB_ORGANIZATION =zettabyte
+LOCALV_INFLUXDB_BUCKET=samm002-local-bucket
+
+LOCAL_INFLUXDB_TOKEN="r3s1oDQzcMtdy7owFQInB3meWDxI7GGRkhrtGuXk9prK8u5SB6x0RbiI7e_VFX5JFBrAukrdfTflih-UcBhcJQ=="
+LOCAL_INFLUXDB_URL=http://34.101.237.206:8086
 LOCAL_INFLUXDB_ORGANIZATION =zettabyte
-LOCAL_INFLUXDB_BUCKET=samm002-local-bucket
+LOCAL_INFLUXDB_BUCKET=smartlamp
 
 
