--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node --env-file=.env server.js",
     "dev-old": "nodemon --env-file=.env server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start_dev": "pm2 start pm2.config.json --env development",
     "start_prod": "pm2 start pm2.config.json --env production",
