--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5",
     "mqtt": "^5.5.2",
+    "socket.io": "^4.7.5",
     "tls": "^0.0.1"
   },
   "devDependencies": {
